--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
 		"es6": true
 	},
 	"parserOptions": {
+		"ecmaVersion": 2021,
         "parser": "babel-eslint",
         "sourceType": "module",
         "allowImportExportEverywhere": true
